--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <title>REST API ISSUES</title>
+        <title>Repo Issues Display</title>
   </head>
   <body>
     <div id="root"></div>
